If the caret is at the boundary of a misspelling, getting suggestions via context menu should work

If a screen reader user tries to get spelling suggestions for a misspelled word, they usually first move to the beginning of the word using Ctrl+Left/Right and then invoke the context menu.
On Windows, Ctrl+Left/Right always moves to the start of the word. On other platforms, Ctrl or Cmd + Left moves to the start whilst Ctrl / Cmd + Right moves to the end of the word.
When any of the above keystrokes are pressed, the user hears the whole word.
It is not reasonable to expect the user to first press Ctrl+Left/Right to navigate through the line until they find the spelling mistake and then have to additionally press cursor right, (or cursor left when using Cmd-Right on Mac), so that the caret is within the word before invoking the context menu.
The result is that many screen reader users might have the mistaken believe that our spell checker is broken.

R=dmazzoni@chromium.org, yosin@chromium.org

Bug: 790828
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Icdfc24eb85afe3217320d648183083133418fd58
Reviewed-on: https://chromium-review.googlesource.com/1033430
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592270}
Former-commit-id: 8698aaf73d4a96f2a690d693c18ebe4d1a842d65